# deephaven-core

./: README.md  build.gradle  settings.gradle
.github/workflows/: build-linux-clients-v2.yml  build-linux-clients.yml  clients-cpp-python-linux.yml  clients-cpp-python-ubu2404.yml  clients-cpp-python-windows.yml  clients-cpp-python.yml  clients-csharp.yml  clients.yml  deephaven-version.yml  docs-ci.yml  kosak.yml
cpp-client/: CHANGE_COOKIE.txt  README-buildclients-windows.md  README-windows.md  README.md  build-all-clients.bat  build-client.bat  build-cpp-client.bat  build-dependencies.sh  build-linux-clients.notbat  build-windows-clients.bat  build.gradle  test-on-gcp.sh
cpp-client/deephaven/: CMakeLists.txt  this_pain_no_name.txt
cpp-client/deephaven/dhsimple2/: CMakeLists.txt  dhsimple2.cpp
cpp-examples/cleanup/: main.cc
cpp-examples/compare_approaches/: main.cc
cpp-examples/create_table_with_arrow_flight/: main.cc
cpp-examples/create_table_with_table_maker/: main.cc
cpp-examples/do_exchange/: main.cc
cpp-examples/doc/: conf.py  create_table_with_arrow_flight.rst
cpp-examples/hello_world/: main.cc
cpp-examples/read_table_with_arrow_flight/: main.cc
cpp-examples/readcsv/: main.cc
csharp/Dhe_NetClient/: Dhe_NetClient.csproj
csharp/ExcelAddIn/: DeephavenExcelFunctions.cs  ExcelAddIn.csproj  ExcelAddIn.sln  README.md  StateManager.cs
csharp/ExcelAddInInstaller/: ExcelAddInInstaller.aip  Installer.sln
gradle/: libs.versions.toml  version.gradle
print-version/: build.gradle  settings.gradle
py/: build-py-client.bat
sphinx/: sphinx.gradle
(+725 files in other folders)
